:zap: feat: first stage of publish jobs

--- a/TODO
+++ b/TODO
@@ -1,4 +1,5 @@
 1. adding logger to service layer
 2. adding volume to compose
 3. adding job for sync balance cache layer with db
-4.publish job per dst to nats
+4. publish job per dst to nats
+5. call ensure nats in entry point
