:memo: feat:fix some router call

--- a/TODO
+++ b/TODO
@@ -7,3 +7,4 @@
 7. submit done process to databse
 8. clarify worker
 9. adding validation for content and destinations
+10. add more logic for health check here
