:zap: feat:refactor entity and db design

--- a/TODO
+++ b/TODO
@@ -6,3 +6,4 @@
 8. clarify worker
 10. add validation for order register
 11. if redis down, its return 503 but create user in db, violate this on redis failure
+12. add job interval to config
