:zap: fix: fixing retry policy for sms publishing

--- a/TODO
+++ b/TODO
@@ -2,8 +2,7 @@
 2. adding volume to compose
 3. adding job for sync balance cache layer with db
 6. adding failed job to DLQ
-7. submit done process to database
 8. clarify worker
 10. add validation for order register
 11. if redis down, its return 503 but create user in db, violate this on redis failure
-12. add job interval to config
+13. adding ctx to publish and republish
