:sparkles: feat:adding distributed lock for republish job

--- a/TODO
+++ b/TODO
@@ -1,4 +1,4 @@
 1. adding logger to service layer
 2. adding volume to compose
 8. clarify worker
-13. adding ctx to publish and republish
+18. write a document
