:sparkles: feat:adding buffer update to staus update on workers

--- a/TODO
+++ b/TODO
@@ -1,5 +1,5 @@
 1. adding logger to service layer
 2. adding volume to compose
-8. clarify worker
 18. write a document
 19. replace json serialize with protobuf
+20.refund user after fail sms
